# creditmodel

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: api.py
configs/: base.yaml  german_credit.yaml  home_credit.yaml
reports/refactor/: 00_diagnostic.md  known_gaps.md  progress.md
src/creditscorecard/: __init__.py  cli.py  config.py  logging.py  pipeline.py  reasons.py  registry.py  reporting.py  scoring.py
src/creditscorecard/data/: __init__.py  adapters.py  definition_of_default.py  reject_inference.py  schema.py  split.py
src/creditscorecard/evaluation/: __init__.py  benchmark.py  calibration.py  calibration_checks.py  curves.py  discrimination.py  explainability.py  fairness.py  metrics.py  stability.py
src/creditscorecard/features/: __init__.py  binning.py  selection.py  woe.py
src/creditscorecard/governance/: __init__.py  metadata.py
src/creditscorecard/model/: __init__.py  calibrate.py  scorecard.py  train.py
src/creditscorecard/monitoring/: __init__.py  monitor.py  runlog.py
src/creditscorecard/reporting/: __init__.py  _helpers.py  context.py  mdd.py
src/creditscorecard/reporting/mdd_sections/: __init__.py  ch01_executive.py  ch02_sample_design.py  ch03_reject_inference.py  ch04_data_quality.py  ch05_feature_engineering.py  ch06_feature_selection.py  ch07_model.py  ch08_calibration.py  ch09_scaling.py  (+7 more)
tests/: conftest.py  test_benchmark_delong.py  test_binning.py  test_calibration_traffic_light.py  test_cli.py  test_config.py  test_definition_of_default.py  test_discrimination_ci.py  test_explainability_parity.py  test_fairness.py  test_governance_metadata.py  test_leakage.py  test_monitoring.py  test_monitoring_runlog.py  test_pipeline_e2e.py  test_registry.py  test_regression_baseline.py  test_reject_inference.py  test_reporting_mdd.py  test_sample_design.py  test_scorecard_scaling.py  test_scoring_parity.py  test_selection.py  test_stability_psi.py  test_validation_metrics.py  test_woe_iv.py
