[project]
name = "creditscorecard"
version = "0.1.0"
description = "Production-grade Probability-of-Default (PD) application scorecard"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Credit Risk Model Development" }]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26,<2.1",
    "pandas>=2.1",
    "scipy>=1.11",
    "scikit-learn>=1.3,<1.6",
    "statsmodels>=0.14",
    "optbinning>=0.19",
    "pandera>=0.18",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "typer>=0.12",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "matplotlib>=3.8",
    "jinja2>=3.1",
    "markdown>=3.6",
    "joblib>=1.3",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
mlflow = ["mlflow>=2.12"]
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "httpx>=0.27",
    "types-pyyaml>=6.0",
    "pandas-stubs>=2.1",
]

[project.scripts]
scorecard = "creditscorecard.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/creditscorecard"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "app"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N", "W", "C4", "PL"]
ignore = ["PLR0913", "PLR2004", "PLR0912", "PLR0915", "N803", "N806", "PLC0415"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101"]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
disallow_untyped_defs = false
files = ["src", "app"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning", "ignore::FutureWarning"]

[tool.coverage.run]
source = ["src/creditscorecard"]
omit = ["*/__init__.py"]

[tool.coverage.report]
show_missing = true
